%% Business Logic Layer Class Diagram For Task 1

classDiagram

%% ───── User Entity ─────
class User {
    +UUID id
    +String first_name
    +String last_name
    +String email
    +String password      %% should be hashed
    +Date created_at
    +List~Review~ reviews %% user's reviews
    +List~Place~ places   %% user's places
    +register()
    +login()
    +updateProfile()
}
%% Represents system users who can list places and write reviews.

%% ───── Place Entity ─────
class Place {
    +UUID id
    +String name
    +String description
    +String address
    +Integer prices
    +Float price_per_night
    +UUID owner_id
    +Date created_at
    +Date updated_at
    +List~Review~ reviews
    +List~Amenity~ amenities
    +addReview()
    +updateDetails()
    +calculateAverageRating()
}
%% Represents rental properties owned by users.

%% ───── Review Entity ─────
class Review {
    +UUID id
    +UUID user_id
    +UUID place_id
    +String text
    +Integer rating
    +Date created_at
    +Date updated_at
    +editReview()
    +deleteReview()
}
%% Represents feedback left by users on places.

%% ───── Amenity Entity ─────
class Amenity {
    +UUID id
    +String name
    +Date created_at
    +Date updated_at
    +List~Place~ places
    +updateAmenity()
}
%% Represents features like Wi-Fi, Pool, etc., linked to Places.

%% ───── Relationships ─────
User      "1" --> "0..*" Place     : Owns
User      "1" --> "0..*" Review    : Writes
Place     "1" --> "0..*" Review    : Has
Review    "*" --> "1"   User       : Belongs to
Place     "*" --> "*"   Amenity    : Includes
Amenity   "*" --> "*"   Place      : Used in
